--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "anymatch": "^3.1.3",
     "array-flatten": "^1.1.1",
     "aws-ssl-profiles": "^1.1.2",
+    "axios": "^1.10.0",
     "balanced-match": "^1.0.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
